Add bulk create endpoint
